# Proton-Drive-linux

./: .gitignore  LICENSE  README.md  debug_scan.ts  drive.sh  package.json  proton-drive  proton-drive-tray.desktop  proton-drive-tray.py  proton-drive-tray.service  proton-drive-tray.service.template  proton-fuse.service  proton-sync  proton-sync.service  proton-sync.service.template  setup.sh  start-sync.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
sdk/js/cli/: README.md  package.json  restore_all.ts
sdk/js/cli/scripts/: build-cli.mjs
sdk/js/cli/src/: init.ts  proton-sync.ts
sdk/js/cli/src/cache/: sqliteCache.ts
sdk/js/cli/src/credentials/: fallbackCredentialsStore.test.ts  fallbackCredentialsStore.ts  index.ts  secretCredentialsStore.ts
sdk/js/cli/src/fuse/: cache.ts  fuse-native.d.ts  index.ts  inode.ts  operations.ts  remoteEvents.ts  uploader.ts
sdk/js/cli/src/sync/: dashboard.ts  db.ts  engine.ts  ignore.test.ts  ignore.ts  index.ts  sqlite.ts
sdk/js/cli/src/sync/dashboard/: app.js  style.css  template.ts
src/: index.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
