[package]
name = "proton-drive-desktop"
version = "0.1.0"
description = "Proton Drive Linux Sync Client Desktop Wrapper"
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"
# We need to run external commands like spawning the sync daemon, which can be done using std::process::Command.
# We also want to support raw window and process handling.
